--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -72,6 +72,16 @@
           />
           <span>Ranked Choice Vote</span>
         </div> 
+        <div class="form-group">
+          <input
+            type="checkbox"
+            name="gatekeep"
+            value="true"
+            checked
+          />
+          <span>Gatekeep Required</span>
+</div>
+<input type="submit" class="btn btn-primary" value="Create" />
         <input type="submit" class="btn btn-primary" value="Create" />
       </form>
     </div>
