frontend works, backend impl

--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -83,12 +83,12 @@
             />
             <option value="gatekeep" selected>Gatekeep Required</option>
           </select>
-        <div style="display:none;" id="waivedUsers" class="form-group">
+        <div id="waivedUsers" class="form-group">
           <input
             type="text"
             name="waivedUsers"
             class="form-control"
-            placeholder="Waive Usernames (Comma-separated)"
+            placeholder="Waive Usernames (Comma-separated, NO Whitespace)"
           />
         </div>
 <input type="submit" class="btn btn-primary" value="Create" />
