actually whitespace is ok

--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -88,7 +88,7 @@
             type="text"
             name="waivedUsers"
             class="form-control"
-            placeholder="Waive Usernames (Comma-separated, NO Whitespace)"
+            placeholder="Waive Usernames (Comma-separated)"
           />
         </div>
 <input type="submit" class="btn btn-primary" value="Create" />
