--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -3,7 +3,7 @@
   <head>
     <title>CSH Vote</title>
     <!-- <link rel="stylesheet" href="https://themeswitcher.csh.rit.edu/api/get" /> -->
-    <link rel="stylesheet" href="https://assets.csh.rit.edu/csh-material-bootstrap/4.3.1/dist/csh-material-bootstrap.min.css" media="screen"/>
+    <link rel="stylesheet" href="https://assets.csh.rit.edu/csh-material-bootstrap/4.3.1/dist/csh-material-bootstrap.min.css" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -28,7 +28,7 @@
             class="form-control"
             name="shortDescription"
             placeholder="Short Description"
-          />
+          >
         </div>
         <div class="form-group">
           <input
@@ -36,7 +36,7 @@
             name="longDescription"
             class="form-control"
             placeholder="Long Description (Optional)"
-          />
+          >
         </div>
         <div class="form-group">
           <select name="options" id="options" onChange="onOptionsChange()" class="form-control">
@@ -54,14 +54,14 @@
             name="customOptions"
             class="form-control"
             placeholder="Custom Options (Comma-separated)"
-          />
+          >
         </div>
         <div class="form-group">
           <input
             type="checkbox"
             name="allowWriteIn"
             value="true"
-          />
+          >
           <span>Allow Write-In Votes</span>
         </div>
         <div class="form-group">
@@ -69,7 +69,7 @@
             type="checkbox"
             name="rankedChoice"
             value="true"
-          />
+          >
           <span>Ranked Choice Vote</span>
         </div> 
         <div class="form-group">
@@ -80,18 +80,18 @@
               value="true"
               checked
               onchange="onGatekeepChange()"
-            />
-            <option value="gatekeep" selected>Gatekeep Required</option>
-          </select>
+            >
+            <span> Gatekeep Required</span>
+        </div>
         <div id="waivedUsers" class="form-group">
           <input
             type="text"
             name="waivedUsers"
             class="form-control"
             placeholder="Waive Usernames (Comma-separated)"
-          />
+          >
         </div>
-<input type="submit" class="btn btn-primary" value="Create" />
+        <input type="submit" class="btn btn-primary" value="Create">
       </form>
     </div>
     <script>
@@ -103,14 +103,13 @@
         }
       }
       function onGatekeepChange(){
-      const gatekeepBox = document.getElementById("gatekeep");
-      const waivedUsers = document.getElementById("waivedUsers");
-      if (gatekeepBox.checked){
-        document.getElementById("waivedUsers").style.display = null
-      }
-      else{
-      document.getElementById("waivedUsers").style.display = "none"
-      }
+        const gatekeepBox = document.getElementById("gatekeep");
+        const waivedUsers = document.getElementById("waivedUsers");
+        if (gatekeepBox.checked){
+          document.getElementById("waivedUsers").style.display = null
+        } else {
+          document.getElementById("waivedUsers").style.display = "none"
+        }
       }
     </script>
   </body>
