--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -72,6 +72,14 @@
           >
           <span>Ranked Choice Vote</span>
         </div>
+        <div class="form-group">
+          <input
+            type="checkbox"
+            name="hidden"
+            value="true"
+          >
+          <span>Hidden</span>
+        </div>
         {{ if .IsEvals }}
         <div class="form-group">
             <input
