Clarify gatekeep autoclose for evals

--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -89,7 +89,7 @@
               value="true"
               onchange="onGatekeepChange()"
             >
-            <span> Gatekeep Required</span>
+            <span> Gatekeep Required (Require Quorum, Limit Voters, Force Automatic Close)</span>
         </div>
         <div id="quorumTypeGroup" class="form-group" style="display:none">
             <span>Quorum Type</span>
