fixup! Allow hiding results while poll is open
Till -> Untill

--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -78,7 +78,7 @@
             name="hidden"
             value="true"
           >
-          <span>Hide Results Till Vote is Complete</span>
+          <span>Hide Results Untill Vote is Complete</span>
         </div>
         {{ if .IsEvals }}
         <div class="form-group">
