--- a/templates/result.tmpl
+++ b/templates/result.tmpl
@@ -33,6 +33,11 @@
       <br />
       <br />
 
+      {{ if and $.IsHidden $.IsOpen }}
+      <div id="results">
+        <h4>Results will be available once the poll closes</h4>
+      </div>
+      {{ else }}
       <div id="results">
         {{ range $i, $val := .Results }}
           {{ if eq $.VoteType "ranked" }}
@@ -46,12 +51,6 @@
           {{ end }}
         {{ end }}
       </div>
-      {{ if and (.CanModify) (.IsHidden) }}
-      <br />
-      <br />
-      <form action="/poll/{{ .Id }}/reveal" method="POST">
-        <button type="submit" class="btn btn-success">Reveal Votes</button>
-      </form>
       {{ end }}
       {{ if and (.CanModify) (not .IsHidden) }}
       <br />
