--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -47,7 +47,7 @@
               class="list-group-item list-group-item-action"
               href="/poll/{{ $poll.Id }}"
             >
-              <span style="font-size: 1.1rem">{{
+              <span style="font-size: 1.1rem; white-space: normal; word-wrap: break-word;">{{
                 $poll.ShortDescription
               }}</span>
 
