--- a/templates/result.tmpl
+++ b/templates/result.tmpl
@@ -25,6 +25,15 @@
     </nav>
 
     <div class="container main p-5">
+      {{ if eq .CanVote 9 }}
+        <div id="already-voted" class="alert alert-info">
+            <button class="close" data-dismiss="alert" aria-label="Close" onclick="document.getElementById('already-voted').style.display='none';">
+              <span>&times;</span>
+            </button>
+              <h5>You have already voted in this poll.</h5>
+        </div>
+      {{ end }}
+
       <h2 style="white-space: normal; word-wrap: break-word;">{{ .ShortDescription }}</h2>
       {{ if .LongDescription }}
       <h4>{{ .LongDescription | MakeLinks }}</h4>
@@ -38,6 +47,16 @@
         <h4>Results will be available once the poll closes</h4>
       </div>
       {{ else }}
+      {{/* Displays a message informing you that you are unable to vote, and common reasons why this might be the case */}}
+      
+      {{ if and (gt .CanVote 0) (ne .CanVote 9) }}
+      <div id="cannot-vote">
+        <h5>
+            You are not eligible to vote in this poll. This likely means that you are either not active 
+            or did not meet the gatekeep requirements at the time the poll opened.
+        </h5>
+      </div>
+      {{ end }}
       {{/* Displays information about required quorum and number of voters */}}
       <div id="quorum-info">
         <h5>Number of Eligible Voters: {{ len .EligibleVoters }}</h5>
