--- a/templates/result.tmpl
+++ b/templates/result.tmpl
@@ -11,18 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="/">Vote</a>
-        <div class="nav navbar-nav ml-auto">
-          <div class="navbar-user">
-            <img src="https://profiles.csh.rit.edu/image/{{ .Username }}" />
-            <span class="text-light">{{ .FullName }}</span>
-            <a href="/auth/logout" style="color: #c3c3c3;"><i>(logout)</i></a>
-          </div>
-        </div>
-      </div>
-    </nav>
+    {{ template "nav" . }}
 
     <div class="container main p-5">
       <h2 style="white-space: normal; word-wrap: break-word;">{{ .ShortDescription }}</h2>
