--- a/templates/unauthorized.tmpl
+++ b/templates/unauthorized.tmpl
@@ -20,18 +20,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container">
-        <a class="navbar-brand" href="/">Vote</a>
-        <div class="nav navbar-nav ml-auto">
-          <div class="navbar-user">
-            <img src="https://profiles.csh.rit.edu/image/{{ .Username }}" />
-            <span class="text-light">{{ .FullName }}</span>
-            <a href="/auth/logout" style="color: #c3c3c3;"><i>(logout)</i></a>
-          </div>
-        </div>
-      </div>
-    </nav>
+    {{ template "nav" . }}
 
     <div
       style="text-align: center; font-size: 1.2rem"
