Added open polls link to navbar for more intuitive navigation

--- a/templates/nav.tmpl
+++ b/templates/nav.tmpl
@@ -3,6 +3,7 @@
     <div class="container">
         <a class="navbar-brand" href="/">Vote</a>
         <a class="nav-item nav-link text-light " href="/create">Create Poll</a>
+        <a class="nav-item nav-link text-light " href="/">Open Polls</a>
         <a class="nav-item nav-link text-light " href="/closed">Closed Polls</a>
         <div class="nav navbar-nav ml-auto">
             <div class="navbar-user">
