Fixed small formatting inconsistency

--- a/templates/closed.tmpl
+++ b/templates/closed.tmpl
@@ -40,9 +40,7 @@
               >
             </a>
           </li>
-          {{
-            end
-          }}
+          {{ end }}
         </ul>
       </div>
     </div>
