--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -45,9 +45,7 @@
               >
             </a>
           </li>
-          {{
-            end
-          }}
+          {{ end }}
         </ul>
       </div>
     </div>
