More formatting fixes

--- a/templates/closed.tmpl
+++ b/templates/closed.tmpl
@@ -31,9 +31,9 @@
               class="list-group-item list-group-item-action"
               href="/results/{{ $poll.Id }}"
             >
-              <span style="font-size: 1.1rem">{{
-                $poll.ShortDescription
-              }}</span>
+              <span style="font-size: 1.1rem">
+                {{ $poll.ShortDescription }}
+              </span>
 
               <span
                 ><i>(created by {{ $poll.CreatedBy }})</i></span
