--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -36,9 +36,9 @@
               class="list-group-item list-group-item-action"
               href="/poll/{{ $poll.Id }}"
             >
-              <span style="font-size: 1.1rem; white-space: normal; word-wrap: break-word;">{{
-                $poll.ShortDescription
-              }}</span>
+              <span style="font-size: 1.1rem; white-space: normal; word-wrap: break-word;">
+                {{ $poll.ShortDescription }}
+              </span>
 
               <span
                 ><i>(created by {{ $poll.CreatedBy }})</i></span
