--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -4,6 +4,9 @@
     <title>CSH Vote</title>
     <!-- <link rel="stylesheet" href="https://themeswitcher.csh.rit.edu/api/get" /> -->
     <link rel="stylesheet" href="https://assets.csh.rit.edu/csh-material-bootstrap/4.3.1/dist/csh-material-bootstrap.min.css" media="screen">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
