Rename shortDescription and longDescription to title and description, respectively

--- a/templates/closed.tmpl
+++ b/templates/closed.tmpl
@@ -35,7 +35,7 @@
               href="/results/{{ $poll.Id }}"
             >
               <span style="font-size: 1.1rem">
-                {{ $poll.ShortDescription }}
+                {{ $poll.Title }}
               </span>
 
               <span
