--- a/templates/create.tmpl
+++ b/templates/create.tmpl
@@ -19,16 +19,16 @@
           <input
             type="text"
             class="form-control"
-            name="shortDescription"
-            placeholder="Short Description"
+            name="title"
+            placeholder="Poll Title"
           >
         </div>
         <div class="form-group">
           <input
             type="text"
-            name="longDescription"
+            name="description"
             class="form-control"
-            placeholder="Long Description (Optional)"
+            placeholder="Description (Optional)"
           >
         </div>
         <div class="form-group">
