--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -40,7 +40,7 @@
               href="/poll/{{ $poll.Id }}"
             >
               <span style="font-size: 1.1rem; white-space: normal; word-wrap: break-word;">
-                {{ $poll.ShortDescription }}
+                {{ $poll.Title }}
               </span>
 
               <span
