--- a/templates/poll.tmpl
+++ b/templates/poll.tmpl
@@ -18,9 +18,9 @@
     {{ template "nav" . }}
 
     <div class="container main p-5">
-      <h2 style="white-space: normal; word-wrap: break-word;">{{ .ShortDescription }}</h2>
-      {{ if .LongDescription }}
-      <h4>{{ .LongDescription | MakeLinks }}</h4>
+      <h2 style="white-space: normal; word-wrap: break-word;">{{ .Title }}</h2>
+      {{ if .Description }}
+      <h4>{{ .Description | MakeLinks }}</h4>
       {{ end }}
       {{ if eq .PollType "ranked" }}
       <p>This is a Ranked Choice vote. Rank the candidates in order of your preference. 1 is most preferred, and {{ .RankedMax }} is least perferred. You may leave an option blank
